--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"chart.js": "^4.1.1",
+		"svelte-chartjs": "^3.1.0"
+	}
 }
