--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"type": "module",
 	"dependencies": {
 		"chart.js": "^4.1.1",
+		"chartjs-plugin-annotation": "^2.1.0",
 		"svelte-chartjs": "^3.1.0"
 	}
 }
